Fixed up some styling issues with code blocks on small screens, started a draft post for embedding elm in phoenix.

--- a/themes/overminddl1-mdl/sass/styles.scss
+++ b/themes/overminddl1-mdl/sass/styles.scss
@@ -508,3 +508,17 @@ tt.docutils.literal {
 pre, tt {
   font-family: 'Source Code Pro', Consolas, Menlo, Monaco, 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Courier New', monospace, serif;
 }
+
+div.entry-content > div {
+  max-width: 100%;
+}
+
+table.codetable {
+  display: block;
+  overflow-x: auto;
+}
+
+pre.code {
+  padding: 8px;
+  overflow-x: auto;
+}
